--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -85,7 +85,7 @@
     #esquerra {
         width: 5em;
         height: 5em;
-        margin-top: 11%;
+        margin-top: 3.8em;
         z-index: 1;
         position: absolute;
     }
@@ -93,7 +93,7 @@
     #dreta {
         width: 5em;
         height: 5em;
-        margin-top: 30%;
+        margin-top: 0.1em;
         z-index: -1;
     }
     
@@ -105,4 +105,88 @@
     
     img {
         animation: 2s rotate360 linear;
+    }
+    
+    #footer {
+        margin: 1em;
+        text-align: center;
+    }
+    
+    #footer div {
+        margin-top: 1em;
+        padding-bottom: 1em;
+    }
+    
+    #footer .fa:hover {
+        opacity: 0.7;
+    }
+    
+    .fa-facebook {
+        background: #3B5998;
+        color: white;
+        padding: 20px;
+        font-size: 30px;
+        width: 50px;
+        text-align: center;
+        text-decoration: none;
+        margin: 5px 2px;
+    }
+    
+    .fa-twitter {
+        background: #55ACEE;
+        color: white;
+        padding: 20px;
+        font-size: 30px;
+        width: 50px;
+        text-align: center;
+        text-decoration: none;
+        margin: 5px 2px;
+    }
+    
+    .fa-google {
+        background: #dd4b39;
+        color: white;
+        padding: 20px;
+        font-size: 30px;
+        width: 50px;
+        text-align: center;
+        text-decoration: none;
+        margin: 5px 2px;
+    }
+    
+    .fa-linkedin {
+        background: #007bb5;
+        color: white;
+        padding: 20px;
+        font-size: 30px;
+        width: 50px;
+        text-align: center;
+        text-decoration: none;
+        margin: 5px 2px;
+    }
+    
+    .fa-youtube {
+        background: #bb0000;
+        color: white;
+        padding: 20px;
+        font-size: 30px;
+        width: 50px;
+        text-align: center;
+        text-decoration: none;
+        margin: 5px 2px;
+    }
+    
+    .fa-instagram {
+        background: #125688;
+        color: white;
+        padding: 20px;
+        font-size: 30px;
+        width: 50px;
+        text-align: center;
+        text-decoration: none;
+        margin: 5px 2px;
+    }
+    
+    #empresa {
+        color: red;
     }
