--- a/public/css/homeEmpresa.css
+++ b/public/css/homeEmpresa.css
@@ -4,11 +4,11 @@
 }
 
 .titol>h1 {
-    size: 2em;
+    font-size: 4em;
 }
 
 img {
-    border-radius: 5px;
+    border-radius: 20%;
 }
 
 .venbinguda {
@@ -27,5 +27,17 @@ img {
 .imatge>img {
     width: 90%;
     height: auto;
-    border: 1px solid black;
+    border: 2px solid black;
+}
+
+.btn {
+    margin-top: 2em;
+}
+
+.btn {
+    height: 6em;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
 }
