--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,11 +2,18 @@
     margin-top: 20%;
 }
 
-#fondo {
-    background-image: linear-gradient( rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("/recursos/fondo1.jpg");
+.card-body {
+    background-image: linear-gradient( rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("/recursos/puzzleBN.jpg");
+}
+
+.card-header {
+    text-align: center;
+}
+
+html,
+body {
+    background-image: linear-gradient( rgba(255, 255, 255), rgba(126, 126, 126));
     height: 100%;
-    filter: blur(1px);
-    filter: grayscale(50%);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -17,6 +24,5 @@
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -1000;
     overflow: hidden;
 }
