--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,8 +1,15 @@
-#fondo {
-    background-image: linear-gradient( rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("/recursos/fondo1.jpg");
+.card-body {
+    background-image: linear-gradient( rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("/recursos/puzzleBN.jpg");
+}
+
+.card-header {
+    text-align: center;
+}
+
+html,
+body {
+    background-image: linear-gradient( rgba(255, 255, 255), rgba(126, 126, 126));
     height: 100%;
-    filter: blur(1px);
-    filter: grayscale(50%);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -13,6 +20,5 @@
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -1000;
     overflow: hidden;
 }
