--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -5,35 +5,35 @@
         height: 100vh;
         margin: 0;
     }
-
+    
     .full-height {
         height: 100vh;
     }
-
+    
     .flex-center {
         align-items: center;
         display: flex;
         justify-content: center;
     }
-
+    
     .position-ref {
         position: relative;
     }
-
+    
     .top-right {
         position: absolute;
         right: 10px;
         top: 18px;
     }
-
+    
     .content {
         text-align: center;
     }
-
+    
     .title {
         font-size: 84px;
     }
-
+    
     .links>a {
         color: #636b6f;
         padding: 0 25px;
@@ -43,12 +43,10 @@
         text-decoration: none;
         text-transform: uppercase;
     }
-    /*Estils afegits per mi*/
-
+    
     .fondo {
         background-image: linear-gradient( rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("/recursos/mans.jpg");
         height: 100%;
-        filter: blur(1px);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -62,65 +60,67 @@
         z-index: -1000;
         overflow: hidden;
     }
-
+    
     .botoMes {
         margin: auto;
         background-color: grey !important;
     }
-
+    
     .botoMes:hover {
         background-color: rgb(73, 67, 67) !important;
         color: white;
         box-shadow: 0px 0px 5px 5px #ffffff;
     }
-
+    
     .botoMes a {
         color: white;
     }
-
+    
     .titol {
         font-family: 'Russo One', sans-serif;
     }
-
+    
     #esquerra {
         width: 5em;
         height: 5em;
         margin-top: 3.8em;
         z-index: 1;
         position: absolute;
+        filter: grayscale(100%);
     }
-
+    
     #dreta {
         width: 5em;
         height: 5em;
         margin-top: 0.1em;
         z-index: -1;
+        filter: grayscale(90%);
     }
-
+    
     @keyframes rotate360 {
         to {
             transform: rotate(360deg);
         }
     }
-
+    
     img {
         animation: 2s rotate360 linear;
     }
-
+    
     #footer {
         margin: 1em;
         text-align: center;
     }
-
+    
     #footer div {
         margin-top: 1em;
         padding-bottom: 1em;
     }
-
+    
     #footer .fa:hover {
         opacity: 0.7;
     }
-
+    
     .fa-facebook {
         background: #3B5998;
         color: white;
@@ -131,7 +131,7 @@
         text-decoration: none;
         margin: 5px 2px;
     }
-
+    
     .fa-twitter {
         background: #55ACEE;
         color: white;
@@ -142,7 +142,7 @@
         text-decoration: none;
         margin: 5px 2px;
     }
-
+    
     .fa-google {
         background: #dd4b39;
         color: white;
@@ -153,7 +153,7 @@
         text-decoration: none;
         margin: 5px 2px;
     }
-
+    
     .fa-linkedin {
         background: #007bb5;
         color: white;
@@ -164,7 +164,7 @@
         text-decoration: none;
         margin: 5px 2px;
     }
-
+    
     .fa-youtube {
         background: #bb0000;
         color: white;
@@ -175,7 +175,7 @@
         text-decoration: none;
         margin: 5px 2px;
     }
-
+    
     .fa-instagram {
         background: #125688;
         color: white;
@@ -186,7 +186,7 @@
         text-decoration: none;
         margin: 5px 2px;
     }
-
+    
     #empresa {
         color: red;
     }
