--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -61,6 +61,10 @@
         overflow: hidden;
     }
     
+    a:hover {
+        color: white !important;
+    }
+    
     .botoMes {
         margin: auto;
         background-color: grey !important;
