--- a/public/css/email.css
+++ b/public/css/email.css
@@ -3,43 +3,32 @@ html {
     background: linear-gradient(90deg, rgba(149, 149, 149, 1) 0%, rgba(255, 255, 255, 1) 5%, rgba(255, 255, 255, 1) 95%, rgba(162, 162, 162, 1) 100%);
 }
 
-h1 {
-    text-align: center;
-    font-family: 'Lalezar', cursive;
-}
-
-li {
-    list-style-type: none;
-}
-
 a {
     text-align: center;
     color: black;
+}
+
+h3 {
+    font-family: 'Lalezar', cursive;
 }
 
 a:hover {
     color: grey;
 }
 
-.pieza {
-    width: 1.5em;
-    height: 1.5em;
+.divBotons {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
-.empresa {
+.card {
     border: 1px solid grey;
     border-radius: 10px;
-    padding: 2em;
     margin-bottom: 1em;
     box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
-.empresa:hover {
-    transform: scale(1.03);
-    transition: 0.2s ease;
-}
-
-.divBotons {
-    display: flex;
-    justify-content: center;
+.card-body {
+    background-image: linear-gradient( rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("/recursos/puzzleBN.jpg");
 }
