--- a/public/css/ofertesTreballador.css
+++ b/public/css/ofertesTreballador.css
@@ -3,18 +3,13 @@ html {
     background: linear-gradient(90deg, rgba(149, 149, 149, 1) 0%, rgba(255, 255, 255, 1) 5%, rgba(255, 255, 255, 1) 95%, rgba(162, 162, 162, 1) 100%);
 }
 
-h1 {
-    text-align: center;
-    font-family: 'Lalezar', cursive;
-}
-
-li {
-    list-style-type: none;
-}
-
 a {
     text-align: center;
     color: black;
+}
+
+h1 {
+    font-family: 'Lalezar', cursive;
 }
 
 a:hover {
@@ -26,7 +21,15 @@ a:hover {
     height: 1.5em;
 }
 
-.empresa {
+.nomEmpresa {
+    text-decoration: underline;
+}
+
+.btn {
+    margin: 0.3em;
+}
+
+.oferta {
     border: 1px solid grey;
     border-radius: 10px;
     padding: 2em;
@@ -34,7 +37,7 @@ a:hover {
     box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
-.empresa:hover {
+.oferta:hover {
     transform: scale(1.03);
     transition: 0.2s ease;
 }
@@ -42,4 +45,12 @@ a:hover {
 .divBotons {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+}
+
+.card {
+    border: 1px solid grey;
+    border-radius: 10px;
+    margin-bottom: 1em;
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
